# skripsi-2026

./: .env.development.local  .gitignore
backend/: .env.example  apply_full_svm.py  check_sentiment_status.py  cleanup_orphan_sources.py  database.py  main.py  migrate_sentiment.py  normalize_mention_authors.py  pyproject.toml  reextract_google_news_mentions.py  reset_data.py  seed_admin.py  train_sentiment.py
backend/data/: refresh_state.json  sentiment_seed.csv
backend/media_monitoring_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/models/: metrics_split_50_50.json  metrics_split_70_30.json  metrics_split_80_20.json  svm_sentiment.joblib
backend/sentiment/: __init__.py  dataset.py  evaluate.py  lexicon.py  preprocessing.py  svm.py
backend/sql/: schema.sql
frontend/: next.config.ts  package.json  pnpm-lock.yaml  test-connection.ts  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout-client.tsx  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/mentions/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AdminMentionsPage.tsx  AdminSentimentSection.tsx  AutoRefreshIndicator.tsx  DashboardAdminPage.tsx  DashboardPage.tsx  DateRangePicker.tsx  MentionsPage.tsx  SentimentPage.tsx  Sidebar.tsx  SummaryCards.tsx  SvmTrainingPage.tsx  TimelineChart.tsx  TopAuthorsTable.tsx  TopMentionsCard.tsx  UsersPage.tsx  WordCloudChart.tsx
frontend/context/: AuthContext.tsx  DashboardFilterContext.tsx
frontend/hooks/: useAutoRefreshNews.ts
frontend/services/: api.ts  supabase-api.ts
(+1 files in other folders)
